--- a/src/styles/helper/primefaces.scss
+++ b/src/styles/helper/primefaces.scss
@@ -1,8 +1,16 @@
 @import '../mixins';
 
 .p-component {
-  font-size: 100%;
-  font-family: unset;
+  & [class*='p-']:not(.pi) {
+    font: {
+      size: inherit;
+      weight: inherit;
+    }
+  }
+
+  * {
+    font-family: inherit;
+  }
 }
 
 .p-steps {
@@ -59,16 +67,21 @@
     font-size: 300%;
   }
 
-  .p-dialog-header {
+  &-header {
+    display: flex;
+    align-items: center;
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
 
-    .p-dialog-header-close:hover {
+    &-close:hover {
       color: var(--danger);
+    }
+    &-icons button {
+      min-width: unset;
     }
   }
 
-  .p-dialog-content {
+  &-content {
     padding: 0.25rem 1.5rem;
 
     .p-confirm-dialog-message {
@@ -76,21 +89,17 @@
     }
   }
 
-  .p-dialog-footer {
+  &-footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
     padding: 1.5rem;
     gap: 0.5rem;
 
     button {
-      border: none;
-      padding: 0.5rem 1.25rem;
-      text-transform: capitalize;
-    }
-
-    > * {
-      margin-top: 1rem;
+      margin: 0;
     }
   }
 }
@@ -106,6 +115,15 @@
     display: flex;
     flex-direction: column;
     min-height: 100%;
+
+    & > {
+      header,
+      footer {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+      }
+    }
   }
 }
 
@@ -117,13 +135,20 @@
   font-size: 0.75rem;
 }
 
+.p-float-label {
+  .p-dropdown .p-placeholder {
+    opacity: 1;
+  }
+}
+
 .input > .p-inputtext {
   padding: 0;
   color: unset;
   font-size: unset;
 }
 
-.p-inputtext {
+.p-inputtext,
+.p-inputnumber {
   width: 100%;
 
   &:enabled {
@@ -150,6 +175,15 @@
 
 .p-dropdown {
   border-color: currentColor;
+  & &-label {
+    display: flex;
+  }
+
+  &-item {
+    > img {
+      width: 100%;
+    }
+  }
 }
 
 *:not(.p-paginator) > .p-dropdown {
@@ -306,7 +340,7 @@ p-chart {
   }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
   .p-dialog {
     min-width: 95%;
 
@@ -348,7 +382,6 @@ p-chart {
 
 .p-button {
   text-transform: capitalize;
-  font-size: 120%;
 
   &:hover {
     background-color: hsl(var(--primary-hs), calc(var(--primary-l) - 20%));
@@ -360,7 +393,7 @@ p-chart {
 }
 
 // @each $color,
-// $colorValue in $app-colors-mapped {
+// $colorValue in $colors-mapped {
 //   .p-toast-message-#{$color} {
 //     background-color: var(--#{$color});
 //     color: var(--#{$color}-c);
