--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -86,7 +86,7 @@ $purple: #561843 !default;
 $red: #c54646 !default;
 $blue: #0365a3 !default;
 $yellow: #c4c400 !default;
-$gold: #ffdf00 !default;
+$gold: #ffd700 !default;
 $silver: #bfbfbf !default;
 $pink: #ed028c !default;
 $cyan: #16f1d9 !default;
