--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -121,7 +121,7 @@ nav,
 nav,
 .nav,
 .menu-container {
-  flex: 1 1 auto;
+  flex: 1 1 100%;
   gap: 0.5rem;
 }
 
@@ -155,6 +155,10 @@ nav,
     .menu-container {
       flex-direction: column;
     }
+  }
+
+  img {
+    max-height: 5rem;
   }
 
   .menu-logo {
@@ -225,6 +229,10 @@ nav,
   transition: transform 0.5s;
   z-index: 1;
 
+  &:not(.side-menu:has(> .menu-snap)) {
+    flex-direction: column;
+  }
+
   nav,
   .nav {
     font-size: 120%;
@@ -232,6 +240,7 @@ nav,
     .item {
       // NOTE: Modify this in implementations
       /* border-radius: inherit; */
+      cursor: pointer;
       @include before-content;
 
       &::before {
@@ -261,9 +270,19 @@ nav,
   }
 }
 
+// TODO: Add menu-snap offset for grid main-menu-container
+.menu-snap {
+  display: flex;
+  overflow: scroll;
+
+  .item {
+    padding: 0.125%;
+    z-index: 1;
+  }
+}
+
 // TODO: upgrade: side-menu to edge-menu, This slides menu from all edge of the screen
 .side-menu {
-  flex-direction: column;
   position: relative;
   height: 100%;
   transition: flex-basis 0.5s, transform 0.5s, opacity 0.25s;
@@ -326,9 +345,14 @@ main {
       }
     }
 
+    #{selector.nest('input.main-menu-trigger:not(:checked)','~,~ *', '.side-menu > .menu-snap')} {
+      flex-basis: 25%;
+    }
+
     &.grid:has(> .side-menu:not(.mini)):has(> input.main-menu-trigger:checked) {
       grid-template-columns: 0fr 1fr;
     }
+
     &.grid:has(> .side-menu.mini):has(> input.main-menu-trigger:checked) {
       grid-template-columns: 1fr 20fr;
       @include mini-side-menu-toggled;
@@ -346,6 +370,10 @@ main {
             }
             .side-menu.mini {
               flex-basis: 5%;
+
+              &:has(> .menu-snap) {
+                flex-basis: 10%;
+              }
               @include mini-side-menu-toggled;
             }
           }
@@ -397,16 +425,14 @@ main {
     }
 
     &.flex {
-      input.main-menu-trigger {
-        &:not(:checked) {
-          ~,
-          ~ * {
-            .side-menu {
-              flex-basis: 8.25%;
-              @include mini-side-menu-toggled;
-            }
-          }
+      #{selector.nest('input.main-menu-trigger:not(:checked)','~,~ *','.side-menu')} {
+        flex-basis: 8.25%;
+
+        &:has(> .menu-snap) {
+          flex-basis: 16.5%;
         }
+
+        @include mini-side-menu-toggled;
       }
     }
   }
@@ -419,6 +445,10 @@ main {
 /* Tablet Below */
 @media (max-width: 768px) {
   .main-menu-container {
+    #{selector.nest('input.main-menu-trigger:checked','~,~ *', '.side-menu > .menu-snap')} {
+      flex-basis: 25%;
+    }
+
     input.main-menu-trigger {
       &:not(:checked) {
         ~,
@@ -458,7 +488,6 @@ main {
 /* Mobile Below */
 @media (max-width: 576px) {
   // TODO: Move into main-menu-container
-
   input.main-menu-trigger {
     &:checked {
       width: 100vw;
@@ -469,7 +498,9 @@ main {
       ~,
       ~ * {
         .main-menu {
-          flex-direction: column;
+          &:not(:has(> .menu-snap)) {
+            flex-direction: column;
+          }
 
           .menu-header {
             order: -1;
@@ -516,7 +547,7 @@ main {
   }
 
   .main-menu-container {
-    #{selector.nest('.main-menu', 'nav, .nav,.menu-container')},
+    #{selector.nest('input.main-menu-trigger:checked','~,~ *','.main-menu', 'nav, .nav,.menu-container')},
     &.flex {
       flex-direction: column;
     }
