--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,13 +117,15 @@ b {
   filter: blur(5px);
 }
 
-a,
-.link {
-  color: var(--secondary);
-  cursor: pointer;
+@layer settings {
+  a,
+  .link {
+    color: var(--secondary);
+    cursor: pointer;
 
-  &:hover {
-    color: hsla(var(--secondary-hs), calc(var(--secondary-l) - 10%));
+    &:hover {
+      color: hsla(var(--secondary-hs), calc(var(--secondary-l) - 10%));
+    }
   }
 }
 
@@ -239,6 +241,7 @@ a:not(.link) {
 
 .icon {
   @include flex-center;
+  font-size: 150%;
 }
 
 .icon-container {
@@ -254,10 +257,6 @@ a:not(.link) {
 
   &.h .icon {
     margin: 0 0.5rem;
-  }
-
-  .icon {
-    font-size: 150%;
   }
 }
 
@@ -445,7 +444,7 @@ input {
     &:not(.default) {
       width: 2rem;
       min-width: 2rem;
-      height: 1rem;
+      height: 1.25rem;
     }
 
     &::before {
@@ -846,7 +845,7 @@ option[disabled]:first-of-type {
   display: flex;
   overflow-x: scroll;
   flex-wrap: nowrap;
-  width: 100%;
+  /* width: 100%; */
   gap: 0.5rem;
 
   > .tab {
@@ -1265,7 +1264,7 @@ table {
 
 .scrollable {
   position: relative;
-  height: 100%;
+  /* height: 100%; */
   /* flex: 1 1 auto; */
   overflow-y: scroll;
   overflow-x: hidden;
@@ -1361,13 +1360,11 @@ table {
 
   .img {
     flex: 1 1 40%;
-    width: 40%;
     border-radius: inherit;
   }
 
   .icon {
     flex: 1 1 25%;
-    width: 25%;
     /* padding-left: 0.75rem; */
     /* font-weight: bold; */
   }
@@ -1375,7 +1372,6 @@ table {
   .addon {
     align-self: stretch;
     flex: 1 1 25%;
-    width: 25%;
 
     > * {
       flex: 1 1 auto;
