--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -33,7 +33,7 @@
   border-radius: inherit;
   top: 0;
   left: 0;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 @mixin before-content {
@@ -57,7 +57,7 @@
   }
 
   & > * {
-    // position: relative;
+    /* position: relative; */
     /* z-index: 1; */
   }
 
