--- a/src/styles/helper/primefaces.scss
+++ b/src/styles/helper/primefaces.scss
@@ -53,6 +53,12 @@
   }
 }
 
+.p-tabmenu {
+  &-nav {
+    align-items: flex-end;
+  }
+}
+
 .p-dialog-mask,
 .p-component-overlay,
 .p-dialog-mask.p-component-overlay {
@@ -138,9 +144,33 @@
   font-size: 0.75rem;
 }
 
-body .p-float-label {
-  display: flex;
-  flex-wrap: wrap;
+.p-float-label {
+  &,
+  &.p-inputgroup {
+    display: flex;
+  }
+
+  :focus,
+  .p-filled {
+    ~ label {
+      top: 0;
+      transform: translateY(-100%);
+    }
+  }
+
+  label {
+    margin-top: 0;
+    /* top: 50%; */
+    left: 0;
+    padding: 0.25rem;
+    transform: translateY(-50%);
+
+    &.bottom {
+      transform: translateY(100%);
+      top: unset;
+      bottom: 0;
+    }
+  }
 
   .p-dropdown .p-placeholder {
     opacity: 1;
@@ -156,16 +186,18 @@ body .p-float-label {
 .p-input-icon-left,
 .p-input-icon-right {
   display: flex;
+  align-items: center;
 
   i {
     display: flex;
     align-items: center;
-    position: relative;
-    top: 0;
+    position: absolute;
+    top: unset;
     margin-top: 0;
   }
 }
-.p-input-group {
+
+.p-inputgroup {
   .p-button {
     width: unset;
   }
@@ -179,7 +211,7 @@ body .p-float-label {
   border-radius: var(--border-radius);
 
   & &-label {
-    display: flex;
+    /* display: flex; */
   }
 }
 
@@ -200,12 +232,13 @@ body .p-float-label {
   }
 }
 
-*:not(.p-paginator) > {
-  .p-dropdown,
-  .p-inputtext,
-  .p-inputnumber {
-    width: 100%;
-  }
+.p-dropdown,
+.p-calendar,
+.p-password,
+.p-inputtext,
+.p-inputnumber {
+  width: 100%;
+  flex: 1 1 auto;
 }
 
 p-chart {
@@ -217,47 +250,47 @@ p-chart {
   }
 }
 
-.p-calendar {
-  /* width: 100%; */
+.p-datepicker {
+  min-width: unset;
 
-  .p-datepicker {
-    min-width: unset;
+  .p-datepicker-header {
+    .p-datepicker-month {
+      border: none;
+    }
+  }
 
-    .p-datepicker-header {
-      .p-datepicker-month {
-        border: none;
-      }
+  &:not(.p-datepicker-inline) {
+    box-shadow: unset;
+
+    & > * {
+      position: relative;
     }
 
-    &:not(.p-datepicker-inline) {
-      box-shadow: unset;
-
-      & > * {
-        position: relative;
-      }
-
-      &::before {
-        content: '';
-        display: block;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        box-shadow: var(--card-shadow);
-        border-radius: inherit;
-        top: 0;
-        left: 0;
-        z-index: 0;
-      }
+    &::before {
+      content: '';
+      display: block;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      box-shadow: var(--card-shadow);
+      border-radius: inherit;
+      top: 0;
+      left: 0;
+      z-index: 0;
     }
+  }
 
-    table td > span {
-      width: 2.25rem;
-      height: 2.25rem;
-    }
+  .p-datepicker-buttonbar {
+    padding: 0;
+  }
 
-    .p-datepicker-buttonbar {
-      padding: 0;
-    }
+  .p-timepicker span {
+    font-size: inherit;
+  }
+
+  table td > span {
+    width: 2.25rem;
+    height: 2.25rem;
   }
 }
 
@@ -276,6 +309,15 @@ p-chart {
 
   & + .p-panel {
     margin-top: 1rem;
+  }
+}
+
+.p-timeline-horizontal {
+  &.p-timeline-left .p-timeline-event-opposite {
+    text-align: left;
+  }
+  &.p-timeline-right .p-timeline-event-opposite {
+    text-align: right;
   }
 }
 
@@ -349,6 +391,13 @@ p-chart {
 }
 
 .p-paginator {
+  background-color: unset;
+  padding: 0;
+
+  .p-inputwrapper {
+    width: unset;
+  }
+
   &-left-content {
     margin-right: none;
   }
@@ -359,16 +408,29 @@ p-chart {
 }
 
 .p-datatable {
+  &-header {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+
   &-thead {
     text-transform: capitalize;
   }
 
   &-thead > tr > th,
   &-tbody > tr > td {
-    padding: 0.25rem 0.5rem;
+    /* max-width: 1px; */
+    padding: 0.5rem;
 
     .p-row-toggler {
       min-width: unset;
+    }
+  }
+  tr.p-datatable-row-expansion > td {
+    padding: {
+      left: 5%;
+      right: 5%;
     }
   }
 }
@@ -398,7 +460,7 @@ p-chart {
 
 .p-button {
   width: unset;
-  min-width: 2.5rem;
+  /* min-width: 2.5rem; */
   /* text-transform: capitalize; */
 
   &:hover {
